<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        tools:context=".ui.login.LoginActivity">

    <include layout="@layout/toolbar" android:id="@+id/include2"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/background_text"
            android:textColorLink="@android:color/white"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/include2"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:inputType="textWebPassword"
            android:hint="@string/password"
            android:background="@drawable/background_text"
            android:textColorLink="@android:color/white"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"/>
    <Button
            android:text="@string/logar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintBottom_toTopOf="@+id/txtCadastre"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:textColorLink="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/cadastre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCadastre"
            android:textColorLink="@android:color/white"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>