<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        tools:context=".ui.register.RegisterActivity">

    <include layout="@layout/toolbar" android:id="@+id/include"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNome"
            android:hint="@string/nome"
            android:background="@drawable/background_text"
            android:padding="10dp"
            android:textColorLink="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintBottom_toTopOf="@+id/edtEmail"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailSubject"
            android:hint="@string/email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:padding="10dp"
            android:background="@drawable/background_text"
            android:textColorLink="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNome"
            app:layout_constraintBottom_toTopOf="@+id/extPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/extPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_text"
            android:padding="10dp"
            android:textColorLink="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalvar"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_button"
            android:textColorLink="@android:color/white"
            android:textColor="@android:color/white"
            android:onClick="saveProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extPassword"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>